caproto/v0.8.0/_sources/generated/caproto.server.records.FanoutFields.rst.txt
caproto.server.records.FanoutFields
===================================


.. currentmodule:: caproto.server.records

.. inheritance-diagram:: FanoutFields

.. autoclass:: FanoutFields

    .. if not using autodoc, add this here: automethod:: __init__

    

    
    
        .. note:: To use this, specify
                  ``record="fanout"`` in a
                  :class:`pvproperty`.
    
    

    
    
    .. list-table:: FanoutFields pvproperties
        :header-rows: 1
        :widths: auto

        *  - Attribute
           - Suffix
           - Docs
           - Type
           - Notes
           - Alarm Group
    
        *  - access_security_group
           - ``ASG``
           - Access Security Group
           - CHAR 
           - 
                 Length(29)
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - alarm_acknowledge_severity
           - ``ACKS``
           - Alarm Ack Severity
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - alarm_acknowledge_transient
           - ``ACKT``
           - Alarm Ack Transient
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - alarm_status
           - ``STAT``
           - Alarm Status
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - current_alarm_severity
           - ``SEVR``
           - Alarm Severity
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - dbputfield_process
           - ``PUTF``
           - dbPutField process
           - CHAR 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - description
           - ``DESC``
           - Descriptor
           - CHAR 
           - 
                 Length(41)
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - device_type
           - ``DTYP``
           - Device Type
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - disable
           - ``DISA``
           - Disable
           - INT 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - disable_alarm_severity
           - ``DISS``
           - Disable Alarm Sevrty
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - disable_putfield
           - ``DISP``
           - Disable putField
           - CHAR 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - disable_value
           - ``DISV``
           - Disable Value
           - INT 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - event_name
           - ``EVNT``
           - Event Name
           - CHAR 
           - 
                 Length(40)
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - forward_link
           - ``FLNK``
           - Forward Process Link
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - forward_link_0
           - ``LNK0``
           - Forward Link 0
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.FanoutFields`
           - 
    
        *  - forward_link_1
           - ``LNK1``
           - Forward Link 1
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.FanoutFields`
           - 
    
        *  - forward_link_10
           - ``LNKA``
           - Forward Link 10
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.FanoutFields`
           - 
    
        *  - forward_link_11
           - ``LNKB``
           - Forward Link 11
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.FanoutFields`
           - 
    
        *  - forward_link_12
           - ``LNKC``
           - Forward Link 12
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.FanoutFields`
           - 
    
        *  - forward_link_13
           - ``LNKD``
           - Forward Link 13
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.FanoutFields`
           - 
    
        *  - forward_link_14
           - ``LNKE``
           - Forward Link 14
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.FanoutFields`
           - 
    
        *  - forward_link_15
           - ``LNKF``
           - Forward Link 15
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.FanoutFields`
           - 
    
        *  - forward_link_2
           - ``LNK2``
           - Forward Link 2
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.FanoutFields`
           - 
    
        *  - forward_link_3
           - ``LNK3``
           - Forward Link 3
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.FanoutFields`
           - 
    
        *  - forward_link_4
           - ``LNK4``
           - Forward Link 4
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.FanoutFields`
           - 
    
        *  - forward_link_5
           - ``LNK5``
           - Forward Link 5
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.FanoutFields`
           - 
    
        *  - forward_link_6
           - ``LNK6``
           - Forward Link 6
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.FanoutFields`
           - 
    
        *  - forward_link_7
           - ``LNK7``
           - Forward Link 7
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.FanoutFields`
           - 
    
        *  - forward_link_8
           - ``LNK8``
           - Forward Link 8
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.FanoutFields`
           - 
    
        *  - forward_link_9
           - ``LNK9``
           - Forward Link 9
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.FanoutFields`
           - 
    
        *  - link_selection
           - ``SELN``
           - Link Selection
           - INT 
           - 
                 Inherited from :class:`~caproto.server.records.base.FanoutFields`
           - 
    
        *  - link_selection_loc
           - ``SELL``
           - Link Selection Loc
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.FanoutFields`
           - 
    
        *  - lock_count
           - ``LCNT``
           - Lock Count
           - CHAR 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - new_alarm_severity
           - ``NSEV``
           - New Alarm Severity
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - new_alarm_status
           - ``NSTA``
           - New Alarm Status
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - offset_for_specified
           - ``OFFS``
           - Offset for Specified
           - INT 
           - 
                 Inherited from :class:`~caproto.server.records.base.FanoutFields`
           - 
    
        *  - process_at_iocinit
           - ``PINI``
           - Process at iocInit
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - process_record
           - ``PROC``
           - Force Processing
           - CHAR 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - record_active
           - ``PACT``
           - Record active
           - CHAR 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - record_name
           - ``NAME``
           - Record Name
           - CHAR 
           - 
                 **Read-only**
                 Length(61)
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - record_type
           - ``RTYP``
           - Record type
           - STRING 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.records.RecordFieldGroup`
           - 
    
        *  - reprocess
           - ``RPRO``
           - Reprocess 
           - CHAR 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - scan_phase
           - ``PHAS``
           - Scan Phase
           - INT 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - scan_rate
           - ``SCAN``
           - Scan Mechanism
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - scanning_disable
           - ``SDIS``
           - Scanning Disable
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - scheduling_priority
           - ``PRIO``
           - Scheduling Priority
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - select_mechanism
           - ``SELM``
           - Select Mechanism
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.FanoutFields`
           - 
    
        *  - shift_for_mask_mode
           - ``SHFT``
           - Shift for Mask mode
           - INT 
           - 
                 Inherited from :class:`~caproto.server.records.base.FanoutFields`
           - 
    
        *  - time_stamp_event
           - ``TSE``
           - Time Stamp Event
           - INT 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - time_stamp_link
           - ``TSEL``
           - Time Stamp Link
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - trace_processing
           - ``TPRO``
           - Trace Processing
           - CHAR 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - undefined
           - ``UDF``
           - Undefined
           - CHAR 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - undefined_alarm_severity
           - ``UDFS``
           - Undefined Alarm Sevrty
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
    

    
    

    
    
    .. rubric:: Methods

    .. autosummary::
    
       ~FanoutFields.group_read
       ~FanoutFields.group_write
       ~FanoutFields.publish
       ~FanoutFields.value_write_hook
    
    

    
    
    .. rubric:: Attributes

    .. autosummary::

    
       ~FanoutFields.default_values
       ~FanoutFields.has_val_field
       ~FanoutFields.scan_rate_sec
       ~FanoutFields.type_map
       ~FanoutFields.type_map_read_only
    

    
    .. rubric:: pvproperty methods